--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
 
                 var UsernameOfAdmin =  localStorage.getItem('UsernameAdmin')
-                if(UsernameOfAdmin.toLocaleLowerCase() == "aberick"){
+                if(UsernameOfAdmin.toLowerCase() == "aberick"){
                 console.log(UsernameOfAdmin)
                  li5.classList.add('li5imgvisible')
                   }
