--- a/paires.html
+++ b/paires.html
@@ -28,7 +28,7 @@
             <li id="liMenu"><a href="talons&sacs.html">Talons & Sac a mains</a></li>
             <li id="liMenu"><a href="tenis.html">Tenis</a></li>
             <li id="liMenu"><a href="paires.html" class="actif">Paires monsieurs</a></li>
-            <li id="liMenu"><a href="AdminPanel.html">Admin</a></li>
+            <li id="liMenu"><a href="LoginAdmin.html">Admin</a></li>
             <li id="liMenu"><a href="">657489942/whatsapp</a></li>
         </ul>
     </nav>
