--- a/tenis.html
+++ b/tenis.html
@@ -28,7 +28,7 @@
             <li id="liMenu"><a href="talons&sacs.html">Talons & Sacs a mains</a></li>
             <li id="liMenu"><a href="tenis.html" class="actif">Tenis</a></li>
             <li id="liMenu"><a href="paires.html">Paires monsieurs</a></li>
-            <li id="liMenu"><a href="AdminPanel.html">Admin</a></li>
+            <li id="liMenu"><a href="LoginAdmin.html">Admin</a></li>
             <li id="liMenu"><a href="">657489942/whatsapp</a></li>
         </ul>
     </nav>
