--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
 
                 var UsernameOfAdmin =  localStorage.getItem('UsernameAdmin')
-                
+                console.log(UsernameOfAdmin)
                 
                 if(UsernameOfAdmin.toLowerCase() == "aberick"){
                 console.log(UsernameOfAdmin)
