--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 var UsernameOfAdmin =  localStorage.getItem('UsernameAdmin')
                 
                 
-                if(UsernameOfAdmin.toLowerCase() == "aberick"){
+                if(UsernameOfAdmin.toLowerCase().trim() == "aberick"){
                 console.log(UsernameOfAdmin)
                  li5.classList.add('li5imgvisible')
                     buttonmodifierproduit.style.display = "block"
