--- a/ajouterproduit.html
+++ b/ajouterproduit.html
@@ -203,7 +203,7 @@
     
      
     set(ref(realDB, 'ImageLinks/'+ Math.round(x * 10000000)), {
-        MyImageName: imgname,
+        MyImageName: imgname.toLowerCase(),
         ImageUrl: URL,
         MyImagePrice: imgprice + " XAF",
         MyImageCategory: categorie,
