--- a/ProductsDetails.html
+++ b/ProductsDetails.html
@@ -186,6 +186,9 @@
          });
      }
      );
+     
+     CardPourCommander.style.display = 'none'
+     alert('vous allez etre contacter pour valider votre commande')
  }
 
  
